--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             </div>
         </header>
         <div class="main-wrapper">
-            <div class="main-wrapper__welcome"></div>
-            <p class="main-wrapper__intro">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="main-wrapper__raeson">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+            <img src="#" width="" height="" alt="" class="main-wrapper__welcome">
+            <div class="intro">
+                <p class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+                <p>Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+            </div>
             <section class="reasons">
                 <div class="reasons__wrapper">
                     <div class="reasons__title">Настоящий городок</div>
