--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
             </nav>
             <div class="page-header__logo">
-                <img src="#" width="100" height="85" alt="Седона">
+                <img src="#" width="" height="" alt="Седона">
                 <span class="page-header__toggle page-header__toggle--close">Открыть меню</span>
             </div>
         </header>
