--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main-wrapper">
             <img src="#" width="" height="" alt="" class="main-wrapper__welcome">
             <div class="intro">
-                <p class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+                <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
                 <p>Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
             </div>
             <section class="reasons">
