Заменила тег р на h1

--- a/forma.html
+++ b/forma.html
@@ -24,7 +24,7 @@
         <div class="main-wrapper">
             <img src="#" width="" height="" alt="" class="main-wrapper__mini-welcome">
             <div class="intro">
-                <p class="intro__title">Оставьте свой отзыв</p>
+                <h1 class="intro__title">Оставьте свой отзыв</h1>
                 <p>Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
             </div>
             <form class="form" action="/echo" method="post">
