--- a/forma.html
+++ b/forma.html
@@ -7,6 +7,7 @@
     <body>
         <header class="page-header">
             <nav class="main-nav">
+               <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
                 <div class="main-nav__wrapper main-nav__wrapper--close">
                     <ul class="main-nav__items">
                         <li class="main-nav__item"><a href="#">Главная</a></li>
@@ -18,7 +19,6 @@
             </nav>
             <div class="page-header__logo">
                 <img src="#" width="" height="" alt="Седона">
-                <span class="page-header__toggle page-header__toggle--close">Открыть меню</span>
             </div>
         </header>
         <div class="main-wrapper">
