--- a/forma.html
+++ b/forma.html
@@ -21,8 +21,10 @@
                 <img src="#" width="" height="" alt="Седона">
             </div>
         </header>
-        <div class="main-wrapper">
-            <img src="#" width="" height="" alt="" class="main-wrapper__mini-welcome">
+        <div class="content">
+           <div class="content__mini-welcome">
+               <img src="#" width="" height="" alt="">
+           </div>
             <div class="intro">
                 <h1 class="intro__title">Оставьте свой отзыв</h1>
                 <p>Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
