--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <img src="#" width="" height="" alt="Седона">
             </div>
         </header>
-        <div class="main-wrapper">
-            <img src="#" width="" height="" alt="" class="main-wrapper__welcome">
+        <div class="content">
+           <div class="content__welcome">
+               <img src="#" width="" height="" alt="">
+           </div>
             <div class="intro">
                 <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
                 <p>Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
