--- a/photo.html
+++ b/photo.html
@@ -21,8 +21,10 @@
                 <img src="#" width="" height="" alt="Седона">
             </div>
         </header>
-        <div class="main-wrapper">
-            <img src="#" width="" height="" alt="" class="main-wrapper__mini-welcome">
+        <div class="content">
+           <div class="content__mini-welcome">
+               <img src="#" width="" height="" alt="">
+           </div>
             <div class="intro">
                 <h1 class="intro__title">Фото и видео</h1>
                 <p>Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
