--- a/forma.html
+++ b/forma.html
@@ -25,10 +25,10 @@
            <div class="content__mini-welcome">
                <img src="#" width="" height="" alt="">
            </div>
-            <div class="intro">
+            <section class="intro">
                 <h1 class="intro__title">Оставьте свой отзыв</h1>
-                <p>Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
-            </div>
+                <p class="intro__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+            </section>
             <form class="form" action="/echo" method="post">
                 <section class="form__login">
                     <div class="form-title">Представьтесь, пожалуйста:</div>
