--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
            <div class="content__welcome">
                <img src="#" width="" height="" alt="">
            </div>
-            <div class="intro">
+            <section class="intro">
                 <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-                <p>Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
-            </div>
+                <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+            </section>
             <section class="reasons">
                 <div class="reasons__wrapper">
                     <div class="reasons__title">Настоящий городок</div>
