--- a/photo.html
+++ b/photo.html
@@ -25,10 +25,10 @@
            <div class="content__mini-welcome">
                <img src="#" width="" height="" alt="">
            </div>
-            <div class="intro">
+            <section class="intro">
                 <h1 class="intro__title">Фото и видео</h1>
-                <p>Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-            </div>
+                <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+            </section>
             <section class="gallery-items">
                 <div class="gallery-item">
                     <figure class="gallery-item__image">
