--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <div class="reasons__title">Настоящий городок</div>
                     <div class="reasons__number">- №1 -</div>
                     <p>Седона не атракцион для туристов, там течет своя жизнь</p>
-                    <img src="#" width="" height="" alt="">
+                    <div class="reasons__image">
+                        <img src="#" width="" height="" alt="">
+                    </div>
                     <ul class="reasons__items">
                         <li class="reasons__item">
                             <b>Жилье</b>
@@ -55,7 +57,9 @@
                     <div class="reasons__title">Там есть мост дьявола</div>
                     <div class="reasons__number">- №2 -</div>
                     <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-                    <img src="#" width="" height="" alt="">
+                    <div class="reasons__image">
+                        <img src="#" width="" height="" alt="">
+                    </div>
                 </div>
                 <div class="reasons__item">
                     <div class="reasons__title">Небольшая площадь</div>
