--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
                     <div class="reasons__image">
                         <img src="#" width="" height="" alt="">
                     </div>
-                    <ul class="reasons__items">
-                        <li class="reasons__item">
+                    <ul class="reasons__lists">
+                        <li class="reasons__list reasons__list--sprite">
                             <b>Жилье</b>
-                            <!--Нужен ли здесь модификатор?-->
                             <div>Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
                         </li>
-                        <li class="reasons__item">
+                        <li class="reasons__list reasons__list--sprite">
                             <b>Сувениры</b>
                             <div>Не только китайского, но и местного производства!</div>
                         </li>
-                        <li class="reasons__item">
+                        <li class="reasons__list reasons__list--sprite">
                             <b>Еда</b>
                             <div>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
                         </li>
