--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <li class="main-nav__item"><a href="#">Фото и видео</a></li>
                         <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
                         <li class="main-nav__item"><a href="#">Html Academy</a></li>
-                    </ul>  
+                    </ul>
                 </div>
             </nav>
             <div class="page-header__logo">
@@ -88,9 +88,9 @@
                 <a href="#" class="page-footer__visit">#visitsedona</a>
                 <section class="page-footer__social">
                     <div class="social-links">
-                        <a href="#" class="social-link social-link--twitter"></a>
-                        <a href="#" class="social-link social-link--fb"></a>
-                        <a href="#" class="social-link social-link--utube"></a>
+                        <a href="#" class="social-links__common social-links--tw"></a>
+                        <a href="#" class="social-link__common social-links--fb"></a>
+                        <a href="#" class="social-link__common social-links--yut"></a>
                     </div>
                 </section>
                 <div class="page-footer__copyright">Разработано</div>
