--- a/photo.html
+++ b/photo.html
@@ -29,41 +29,40 @@
                 <h1 class="intro__title">Фото и видео</h1>
                 <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
             </section>
-            <section class="gallery-items">
-                <div class="gallery-item">
-                    <figure class="gallery-item__image">
+            <section class="gallery">
+                <div class="gallery__item">
+                    <figure class="gallery__image">
                         <img src="#" width="" height="" alt="">
-                        <figcaption class="gallery-item__discription">Неродные просторы</figcaption>
-                        <div class="gallery-item__author">Автор фото: Борис</div>
-                        <a href="#" class="gallery-item__like">1350</a>
+                        <figcaption class="gallery__discription">Неродные просторы</figcaption>
+                        <div class="gallery__author">Автор фото: Борис</div>
+                        <a href="#" class="gallery__like">1350</a>
                     </figure>
                 </div>
-                <div class="gallery-item">
-                    <figure class="gallery-item__image">
+                <div class="gallery__item">
+                    <figure class="gallery__image">
                         <img src="#" width="" height="" alt="">
-                        <figcaption class="gallery-item__discription">Местная растительность</figcaption>
-                        <div class="gallery-item__author">Автор фото: Сергей</div>
-                        <a href="#" class="gallery-item__like">143</a>
+                        <figcaption class="gallery__discription">Местная растительность</figcaption>
+                        <div class="gallery__author">Автор фото: Сергей</div>
+                        <a href="#" class="gallery__like">143</a>
                     </figure>
                 </div>
-                <div class="gallery-item">
-                    <figure class="gallery-item__image">
+                <div class="gallery__item">
+                    <figure class="gallery__image">
                         <img src="#" width="" height="" alt="">
-                        <figcaption class="gallery-item__discription">Дорога на север</figcaption>
-                        <div class="gallery-item__author">Автор фото: Петр</div>
-                        <a href="#" class="gallery-item__like">96</a>
+                        <figcaption class="gallery__discription">Дорога на север</figcaption>
+                        <div class="gallery__author">Автор фото: Петр</div>
+                        <a href="#" class="gallery__like">96</a>
                     </figure>
                 </div>
-                <div class="gallery-item">
-                    <figure class="gallery-item__image">
+                <div class="gallery__item">
+                    <figure class="gallery__image">
                         <img src="#" width="" height="" alt="">
-                        <figcaption class="gallery-item__discription">Мост дьявола</figcaption>
-                        <div class="gallery-item__author">Автор фото: Антон</div>
-                        <a href="#" class="gallery-item__like">254</a>
+                        <figcaption class="gallery__discription">Мост дьявола</figcaption>
+                        <div class="gallery__author">Автор фото: Антон</div>
+                        <a href="#" class="gallery__like">254</a>
                     </figure>
                 </div>
             </section>
-            <!--здесь видимо как то по другому надо-->
             <div class="interested">
                 <div class="interested__title">Все еще сомневаетесь?</div>
                 <p>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
