Исправила в Форме 2 ошибку

--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@
            <div class="content__mini-welcome">
                <img src="#" width="" height="" alt="">
            </div>
-            <section class="intro">
+            <section class="intro intro--hide">
                 <h1 class="intro__title">Фото и видео</h1>
                 <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
             </section>
