--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
            <div class="content__mini-welcome">
                <img src="#" width="" height="" alt="">
            </div>
-            <section class="intro">
+            <section class="intro intro--hide">
                 <h1 class="intro__title">Оставьте свой отзыв</h1>
                 <p class="intro__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
             </section>
