Исправила в Фото 1 ошибку

--- a/photo.html
+++ b/photo.html
@@ -66,7 +66,12 @@
             <div class="interested">
                 <div class="interested__title">Все еще сомневаетесь?</div>
                 <p>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-                <video src="#"></video>
+            </div>
+            <div class="video">
+                <div class="video__slider"></div>
+                <div class="video__update"></div>
+                <div class="video__quality"></div>
+                <div class="video__deploy"></div>
             </div>
         </div>
         <footer class="page-footer">
