--- a/form.html
+++ b/form.html
@@ -47,7 +47,7 @@
                     <label for="tel">Контактный телефон:
                         <input type="tel" name="tel" id="tel" placeholder="Введите телефон">
                     </label>
-                    <span class="form__error">Ошибка, перепроверьте номер</span>
+                  <div class="form__error">Ошибка, перепроверьте номер</div>
                     <label for="email">Электронная почта:
                         <input type="email" name="email" id="email" placeholder="Введите e-mail">
                     </label>
