Добавила второй label

--- a/form.html
+++ b/form.html
@@ -44,10 +44,14 @@
                     <label for="tel">Контактный телефон:</label>
                     <div class="form__icon">
                     	<input type="tel" name="tel" id="tel" placeholder="Введите телефон">
+                    	<label for="tel"></label>
                     </div>
                     <div class="form__error">Ошибка, перепроверьте номер</div>
                     <label for="email">Электронная почта:</label>
-                    <input type="email" name="email" id="email" placeholder="Введите e-mail">
+                    <div class="form__icon">
+                    	<input type="email" name="email" id="email" placeholder="Введите e-mail">
+                    	<label for="email"></label>
+					</div>
                 </div>
                 <div class="form__impression">
                     <div class="form__title">Ваше общее впечатление:</div>
