--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <a href="#" class="page-footer__visit">#visitsedona</a>
                 <section class="page-footer__social">
                     <div class="social-links">
-                        <a href="#" class="social-links__common social-links--tw"></a>
-                        <a href="#" class="social-link__common social-links--fb"></a>
-                        <a href="#" class="social-link__common social-links--yut"></a>
+                        <a href="#" class="social-links__commoт-tw"></a>
+                        <a href="#" class="social-link__common-fb"></a>
+                        <a href="#" class="social-link__common-yut"></a>
                     </div>
                 </section>
                 <div class="page-footer__copyright">Разработано</div>
