Исправила пробелы на 2

--- a/index.html
+++ b/index.html
@@ -1,100 +1,101 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML Academy: Седона</title>
-    </head>
-    <body>
-        <header class="page-header">
-            <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
-            <nav class="main-nav">
-                <div class="main-nav__wrapper main-nav__wrapper--close">
-                    <ul class="main-nav__items">
-                        <li class="main-nav__item"><a href="#">Главная</a></li>
-                        <li class="main-nav__item"><a href="#">Фото и видео</a></li>
-                        <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
-                        <li class="main-nav__item"><a href="#">Html Academy</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="page-header__logo">
-                <img src="#" width="" height="" alt="Седона">
-            </div>
-        </header>
-        <div class="content">
-           <div class="content__welcome">
-               <img src="#" width="" height="" alt="">
-           </div>
-            <section class="intro">
-                <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-                <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
-            </section>
-            <section class="reasons">
-                <div class="reasons__item">
-                    <div class="reasons__title">Настоящий городок</div>
-                    <div class="reasons__number">- №1 -</div>
-                    <p>Седона не атракцион для туристов, там течет своя жизнь</p>
-                    <div class="reasons__image">
-                        <img src="#" width="" height="" alt="">
-                    </div>
-                    <ul class="reasons__lists">
-                        <li class="reasons__list reasons__list--sprite">
-                            <b>Жилье</b>
-                            <div>Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
-                        </li>
-                        <li class="reasons__list reasons__list--sprite">
-                            <b>Сувениры</b>
-                            <div>Не только китайского, но и местного производства!</div>
-                        </li>
-                        <li class="reasons__list reasons__list--sprite">
-                            <b>Еда</b>
-                            <div>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="reasons__item">
-                    <div class="reasons__title">Там есть мост дьявола</div>
-                    <div class="reasons__number">- №2 -</div>
-                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-                    <div class="reasons__image">
-                        <img src="#" width="" height="" alt="">
-                    </div>
-                </div>
-                <div class="reasons__item reasons__item--dif">
-                    <div class="reasons__title">Небольшая площадь</div>
-                    <div class="reasons__number">- №3 -</div>
-                    <p>Все достопримечательности находятся очень близко</p>
-                </div>
-                <div class="reasons__item reasons__item--dif">
-                    <div class="reasons__title">Красивая дорога</div>
-                    <div class="reasons__number">- №4 -</div>
-                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                </div>
-                <div class="reasons__item reasons__item--dif">
-                    <div class="reasons__title">Мало туристов</div>
-                    <div class="reasons__number">- №5 -</div>
-                    <p>Большинство едет в гранд каньон и толпится там</p>
-                </div>
-            </section>
-            <div class="interested">
-                <div class="interested__title">Заинересовались?</div>
-                <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
-                <div class="interested__motel"><a href="#">Найти гостиницу</a></div>
-                <div class="interested__map"></div>
-            </div>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="page-header">
+      <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
+      <nav class="main-nav">
+        <div class="main-nav__wrapper main-nav__wrapper--close">
+          <ul class="main-nav__items">
+            <li class="main-nav__item"><a href="#">Главная</a></li>
+            <li class="main-nav__item"><a href="#">Фото и видео</a></li>
+            <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
+            <li class="main-nav__item"><a href="#">Html Academy</a></li>
+          </ul>
         </div>
-        <footer class="page-footer">
-            <div class="page-footer__wrapper">
-                <a href="#" class="page-footer__visit">#visitsedona</a>
-                <section class="page-footer__social">
-                    <div class="social-links">
-                        <a href="#" class="social-links__common social-links__common--tw"></a>
-                        <a href="#" class="social-links__common social-links__common--fb"></a>
-                        <a href="#" class="social-links__common social-links__common--yut"></a>
-                    </div>
-                </section>
-                <div class="page-footer__copyright">Разработано</div>
-            </div>
-        </footer>
-    </body>
+      </nav>
+      <div class="page-header__logo">
+        <img src="#" width="" height="" alt="Седона">
+      </div>
+    </header>
+    <div class="content">
+      <div class="content__welcome">
+        <img src="#" width="" height="" alt="">
+      </div>
+      <section class="intro">
+        <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+      </section>
+      <section class="reasons">
+        <div class="reasons__item">
+          <div class="reasons__title">Настоящий городок</div>
+          <div class="reasons__number">- №1 -</div>
+          <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+          <div class="reasons__image">
+            <img src="#" width="" height="" alt="">
+          </div>
+          <ul class="reasons__lists">
+            <li class="reasons__list reasons__list--sprite">
+              <b>Жилье</b>
+              <div>Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
+            </li>
+            <li class="reasons__list reasons__list--sprite">
+              <b>Сувениры</b>
+              <div>Не только китайского, но и местного производства!</div>
+            </li>
+            <li class="reasons__list reasons__list--sprite">
+              <b>Еда</b>
+              <div>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
+            </li>
+          </ul>
+        </div>
+        <div class="reasons__item">
+          <div class="reasons__title">Там есть мост дьявола</div>
+          <div class="reasons__number">- №2 -</div>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <div class="reasons__image">
+            <img src="#" width="" height="" alt="">
+          </div>
+        </div>
+        <div class="reasons__item reasons__item--dif">
+          <div class="reasons__title">Небольшая площадь</div>
+          <div class="reasons__number">- №3 -</div>
+          <p>Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="reasons__item reasons__item--dif">
+          <div class="reasons__title">Красивая дорога</div>
+          <div class="reasons__number">- №4 -</div>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="reasons__item reasons__item--dif">
+          <div class="reasons__title">Мало туристов</div>
+          <div class="reasons__number">- №5 -</div>
+          <p>Большинство едет в гранд каньон и толпится там</p>
+        </div>
+      </section>
+      <div class="interested">
+        <div class="interested__title">Заинересовались?</div>
+        <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <div class="interested__motel"><a href="#">Найти гостиницу</a></div>
+        <div class="interested__map"></div>
+      </div>
+    </div>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <a href="#" class="page-footer__visit">#visitsedona</a>
+        <section class="page-footer__social">
+          <div class="social-links">
+            <a href="#" class="social-links__common social-links__common--tw"></a>
+            <a href="#" class="social-links__common social-links__common--fb"></a>
+            <a href="#" class="social-links__common social-links__common--yut"></a>
+          </div>
+        </section>
+        <div class="page-footer__copyright">Разработано</div>
+      </div>
+    </footer>
+  </body>
 </html>
