--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
           </div>
+          <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
           <img src="#" width="" height="" alt="Седона">
