--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <div class="wrapper">
       <header class="page-header">
-        <span class="page-header__menu-toggle page-header__menu-toggle--close">Открыть меню</span>
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__items">
@@ -18,6 +17,7 @@
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
           </div>
+          <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
           <img src="#" width="" height="" alt="Седона">
@@ -28,7 +28,7 @@
           <img src="#" width="" height="" alt="">
         </div>
         <section class="intro">
-          <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <h1 class="intro__title">Седона - небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h1>
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
