--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
-          <div class="reasons__item">
-            <div class="reasons__title">Настоящий городок</div>
-            <div class="reasons__number">- №1 -</div>
-            <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+          <div class="reasons__wrapper">
+            <div class="reasons__item">
+              <div class="reasons__title">Настоящий городок</div>
+              <div class="reasons__number">- №1 -</div>
+              <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+            </div>
             <div class="reasons__image">
               <img src="#" width="" height="" alt="">
             </div>
@@ -54,25 +56,27 @@
               </li>
             </ul>
           </div>
-          <div class="reasons__item">
-            <div class="reasons__title">Там есть мост дьявола</div>
-            <div class="reasons__number">- №2 -</div>
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <div class="reasons__wrapper">
+            <div class="reasons__item">
+              <div class="reasons__title">Там есть мост дьявола</div>
+              <div class="reasons__number">- №2 -</div>
+              <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            </div>
             <div class="reasons__image">
               <img src="#" width="" height="" alt="">
             </div>
           </div>
-          <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper reasons__wrapper--dif">
             <div class="reasons__title">Небольшая площадь</div>
             <div class="reasons__number">- №3 -</div>
             <p>Все достопримечательности находятся очень близко</p>
           </div>
-          <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper reasons__wrapper--dif">
             <div class="reasons__title">Красивая дорога</div>
             <div class="reasons__number">- №4 -</div>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
-          <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper reasons__wrapper--dif">
             <div class="reasons__title">Мало туристов</div>
             <div class="reasons__number">- №5 -</div>
             <p>Большинство едет в гранд каньон и толпится там</p>
