--- a/form.html
+++ b/form.html
@@ -8,7 +8,6 @@
   <body>
     <div class="wrapper">
       <header class="page-header">
-        <span class="page-header__menu-toggle page-header__menu-toggle--close">Открыть меню</span>
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__items">
@@ -34,7 +33,7 @@
         </section>
         <form class="form" action="/echo" method="post">
           <div class="form__login">
-            <div class="form-title">Представьтесь, пожалуйста:</div>
+            <div class="form__title">Представьтесь, пожалуйста:</div>
             <label for="name">Имя:</label>
             <input type="text" name="name" id="name">
             <label for="surname">Фамилия:</label>
@@ -92,7 +91,7 @@
             </ul>
           </div>
           <div class="form__emotions">
-            <div class="form-title">Опишите свои эмоции:</div>
+            <div class="form__title">Опишите свои эмоции:</div>
             <label for="textarea"></label>
             <textarea placeholder="Опишите подробно все свои восторги " name="textarea" id="textarea"></textarea>
           </div>
