--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__items">
-              <li class="main-nav__item"><a href="#">Главная</a></li>
+              <li class="main-nav__item"><a>Главная</a></li>
               <li class="main-nav__item"><a href="#">Фото и видео</a></li>
               <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
