--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="#" width="" height="" alt="">
         </div>
         <section class="intro">
-          <h1 class="intro__title">Седона - небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h1>
+          <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
