--- a/index.html
+++ b/index.html
@@ -67,19 +67,25 @@
             </div>
           </div>
           <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__title">Небольшая площадь</div>
-            <div class="reasons__number">- №3 -</div>
-            <p>Все достопримечательности находятся очень близко</p>
+            <div class="reasons__item">
+              <div class="reasons__title">Небольшая площадь</div>
+              <div class="reasons__number">- №3 -</div>
+              <p>Все достопримечательности находятся очень близко</p>
+            </div>
           </div>
           <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__title">Красивая дорога</div>
-            <div class="reasons__number">- №4 -</div>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="reasons__item">
+              <div class="reasons__title">Красивая дорога</div>
+              <div class="reasons__number">- №4 -</div>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </div>
           <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__title">Мало туристов</div>
-            <div class="reasons__number">- №5 -</div>
-            <p>Большинство едет в гранд каньон и толпится там</p>
+            <div class="reasons__item">
+              <div class="reasons__title">Мало туристов</div>
+              <div class="reasons__number">- №5 -</div>
+              <p>Большинство едет в гранд каньон и толпится там</p>
+            </div>
           </div>
         </section>
         <div class="interested">
