--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
               <img src="#" width="" height="" alt="">
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__item">
+          <div class="reasons__wrapper">
+            <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Небольшая площадь</div>
               <div class="reasons__number">- №3 -</div>
               <p>Все достопримечательности находятся очень близко</p>
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__item">
+          <div class="reasons__wrapper">
+            <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Красивая дорога</div>
               <div class="reasons__number">- №4 -</div>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--dif">
-            <div class="reasons__item">
+          <div class="reasons__wrapper">
+            <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Мало туристов</div>
               <div class="reasons__number">- №5 -</div>
               <p>Большинство едет в гранд каньон и толпится там</p>
