--- a/form.html
+++ b/form.html
@@ -35,11 +35,11 @@
           <div class="form__login">
             <div class="form__title">Представьтесь, пожалуйста:</div>
             <label for="name">Имя:</label>
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" placeholder="Маргарита">
             <label for="surname">Фамилия:</label>
-            <input type="text" name="surname" id="surname">
+            <input type="text" name="surname" id="surname" placeholder="Мунтанион">
             <label for="middle-name">Отчество:</label>
-            <input type="text" name="middle-name" id="middle-name">
+            <input type="text" name="middle-name" id="middle-name" placeholder="Николаевна">
           </div>
           <div class="form__contacts">
             <div class="form__title">Контакная информация:</div>
