--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
-          <img src="#" width="" height="" alt="Седона">
+          <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
         </div>
       </header>
       <div class="content">
