меню и часть контента

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </header>
       <div class="content">
         <div class="content__welcome">
-          <img src="#" width="" height="" alt="">
+          <img src="img/bg-back-mobile.jpg" width="320" height="390" alt="">
         </div>
         <section class="intro">
-          <h1 class="intro__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <h1 class="intro__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
@@ -40,7 +40,7 @@
               <p>Седона не атракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="reasons__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-city.jpg" width="320" height="256" alt="">
             </div>
             <ul class="reasons__lists">
               <li class="reasons__list reasons__list--sprite">
@@ -64,7 +64,7 @@
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
             <div class="reasons__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-bridge.jpg" width="320" height="256" alt="">
             </div>
           </div>
           <div class="reasons__wrapper">
