--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
-          <div class="reasons__wrapper">
+          <div class="reasons__wrapper reasons__wrapper--wrap">
             <div class="reasons__item">
               <div class="reasons__title">Настоящий городок</div>
               <div class="reasons__number">- №1 -</div>
@@ -47,7 +47,7 @@
                 <b>Жилье</b>
                 <div>Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
               </li>
-              <li class="reasons__list reasons__list--sprite">
+              <li class="reasons__list reasons__list--order reasons__list--sprite">
                 <b>Сувениры</b>
                 <div>Не только китайского, но и местного производства!</div>
               </li>
@@ -63,7 +63,7 @@
               <div class="reasons__number">- №2 -</div>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
-            <div class="reasons__image">
+            <div class="reasons__image reasons__image--order">
               <img src="img/photo-bridge.jpg" width="320" height="260" alt="">
             </div>
           </div>
