Добавила класс в список

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
             <ul class="reasons__lists">
               <li class="reasons__list reasons__list--sprite">
                 <b>Жилье</b>
-                <div>Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
+                <div class="reasons__list-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
               </li>
               <li class="reasons__list reasons__list--order reasons__list--sprite">
                 <b>Сувениры</b>
-                <div>Не только китайского, но и местного производства!</div>
+                <div class="reasons__list-text">Не только китайского, но и местного производства!</div>
               </li>
               <li class="reasons__list reasons__list--sprite">
                 <b>Еда</b>
-                <div>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
+                <div class="reasons__list-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
               </li>
             </ul>
           </div>
