--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__items">
               <li class="main-nav__item"><a>Главная</a></li>
-              <li class="main-nav__item"><a href="#">Фото и видео</a></li>
-              <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
+              <li class="main-nav__item"><a href="photo.html">Фото и видео</a></li>
+              <li class="main-nav__item"><a href="form.html">Форма отзыва</a></li>
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
           </div>
-          <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
+          <span class="main-nav__toggle main-nav__toggle--open">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
           <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
