--- a/photo.html
+++ b/photo.html
@@ -11,9 +11,9 @@
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__items">
-              <li class="main-nav__item"><a href="#">Главная</a></li>
-              <li class="main-nav__item"><a href="#">Фото и видео</a></li>
-              <li class="main-nav__item"><a href="#">Форма отзыва</a></li>
+              <li class="main-nav__item"><a href="index.html">Главная</a></li>
+              <li class="main-nav__item"><a>Фото и видео</a></li>
+              <li class="main-nav__item"><a href="form.html">Форма отзыва</a></li>
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
           </div>
